# internal/app/handler/exchange/handler.go
@@ -8,6 +8,7 @@ import (
 	"github.com/K-Kizuku/techer-me-backend/internal/app/handler/schema"
 	"github.com/K-Kizuku/techer-me-backend/internal/app/service/exchange"
 	"github.com/K-Kizuku/techer-me-backend/pkg/errors"
+	"github.com/K-Kizuku/techer-me-backend/pkg/middleware"
 )
 
 type Handler struct {
@@ -20,7 +21,7 @@ func New(exchengeService exchange.IExchangeService) *Handler {
 	}
 }
 
-// @Summary Create Exchange
+// @Summary 名刺交換
 // @Description 名刺交換のためのエンドポイント
 // @Tags Exchange
 // @Accept json
@@ -45,6 +46,31 @@ func (h *Handler) CreateExchange() func(http.ResponseWriter, *http.Request) erro
 		w.WriteHeader(http.StatusCreated)
 
 		fmt.Fprint(w, "OK")
+		return nil
+	}
+}
+
+// @Summary 交換した名刺一覧取得
+// @Description 名刺交換の一覧を取得するためのエンドポイント
+// @Tags Exchange
+// @Accept json
+// @Produce json
+// @Success 200 {object} schema.GetExchangesOutput "OK"
+// @Failure 401 {string} string "Unauthorized"
+// @Failure 500 {string} string "Internal Server Error"
+// @Security Bearer
+// @Router /exchanges [get]
+func (h *Handler) GetExchanges() func(http.ResponseWriter, *http.Request) error {
+	return func(w http.ResponseWriter, r *http.Request) error {
+		userID := r.Context().Value(middleware.UserIDKey).(string)
+
+		exchanges, err := h.exchangeService.GetByID(r.Context(), userID)
+		if err != nil {
+			return err
+		}
+		if err := json.NewEncoder(w).Encode(exchanges); err != nil {
+			return errors.New(http.StatusInternalServerError, err)
+		}
 		return nil
 	}
 }
