# internal/app/handler/schema/exchange.go
@@ -5,3 +5,12 @@ type CreateExchangeInput struct {
 	User2ID string `json:"user_id_2"`
 	EventID string `json:"event_id"`
 }
+
+type Exchange struct {
+	UserID  string `json:"user_id"`
+	EventID string `json:"event_id"`
+}
+
+type GetExchangesOutput struct {
+	Exchanges []Exchange `json:"exchanges"`
+}
